<resources>
    <string name="app_name">Make Up Your Mind</string>
    <string name="action_settings">Settings</string>
    <string name="American">American</string>
    <string name="Chinese">Chinese</string>
    <string name="Japanese">Japanese</string>
    <string name="Korean">Korean</string>
    <string name="Italian">Italian</string>
    <string name="Indian">Indian</string>
    <string name="South_East_Asian">South East Asian</string>
    <string name="Arabian">Arabian/Middle Eastern</string>
    <string name="Barbeque">Barbeque</string>
    <string name="Fast_Food">Fast Food</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="French">French</string>
    <string name="Mexican">Mexican</string>
    <string name="hello">ImageView from URL</string>
    <string name="credits">Designed by Liew Chee Town, Wee Miao Zi and Yaw Meng Wai. Copyright. Hackillinois 2016 American- Wikipedia - https://upload.wikimedia.org/wikipedia/commons/7/71/Soul_Food_at_Powell\'s_Place.jpg
SEA- Premier Village Danang- http://premier-village-danang.com/wp-content/uploads/2015/07/Vietnamese-Food.jpg
Chinese- CozyStay Hotel Bali - http://soputan.cozystayhotelbali.com/wp-content/uploads/2015/07/Barbecued-pork-noodles.jpg
Japanese - Crossing Travel-http://media.crossingtravel.com/files/tag/2015/09/26/japanese-food-1463.jpg
Korean - Resort World Sentosa Singapore - http://www.rwsentosa.com/Portals/0/RWS%20Revamp/FNB/Insadong/Insadong-Bimbibap.jpg
Fast Food - TechnoBuffalo- http://www.technobuffalo.com/wp-content/uploads/2014/04/fast-food.jpg
Mediterranean-Casablanca Mediterranean Cuisine-http://www.casablancamedicuisine.com/images/banner3.jpg
Indian- Atlanta Blackstar- http://d39ya49a1fwv14.cloudfront.net/wp-content/uploads/2015/01/Indian-food-specialties.jpg
Italian- Delivery WOW - https://www.deliverywow.com/order-food-online/images/main-photo-chicago-italian-food-delivery.jpg
Middle Eastern-Fine Dining Lovers http://finedininglovers.cdn.crosscast-system.com/BlogPost/l_4665_pita.jpg</string>
    <string name="Address">Address:</string>
    <string name="Name">Name:</string>
    <string name="Phone">Contact Number:</string>
    <string name="Rating">Rating:</string>
    <string name="ReviewCount">No. of reviews:</string>
    <string name="Yelp">Information provided by Yelp</string>


</resources>
