<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="16dp"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="5dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/hello"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:id="@+id/card_title"
                    android:layout_below="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/American"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/Arabian"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/Italian"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/Chinese"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/Mediterranean"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/Korean"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat"
                    android:id="@+id/card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/South_East_Asian"/>

            </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>